--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -9,4 +9,7 @@
 		<h3>Hello World</h3>
 	</body>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/buAzVkcH4YI" frameborder="0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21490.168867105993!2d-122.32601520927884!3d47.67915466157557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901479006afd25%3A0xd6e9b9acc37ccba2!2sRavenna%2C+Seattle%2C+WA!5e0!3m2!1sen!2sus!4v1490942000448" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<a class="twitter-timeline" href="https://twitter.com/KimKardashian">Tweets by KimKardashian</a> 
+		<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </html>
