--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,24 @@
 		<title>Hannah's Awesome Website</title>
 	</head>
 	<body>
-	
+		<h1>Hannah Suh</h1>
+		<h2>About Me</h2>
+		<p>I love Harry Potter</p>
+		<p>Spaghetti is my favorite food</p>
+		<h2>My Favorite Sites</h2>
+		<ul>
+			<li>
+				<a href="https://www.google.com">Google</a>
+			</li>
+			<li>
+				<a href="https://www.netflix.com">Netflix</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com">Facebook</a>
+			</li>
+			<li>
+				<a href="https://www.tumblr.com">Tumblr</a>
+			</li>
+		<h2>My Favorite Pictures</h2>
 	</body>
 </html>
