--- a/tags.html
+++ b/tags.html
@@ -27,5 +27,10 @@
 			</li>
 		</ul>
 		<h2>My Favorite Pictures</h2>
-			<img src="http://pngimg.com/uploads/ice_cream/ice_cream_PNG5088.png"title="Ice Cream"style="width:100px;height:100px;margin:5px">
+		<a href="http://pngimg.com/img/food/ice_cream">
+			<img src="http://pngimg.com/uploads/ice_cream/ice_cream_PNG5088.png" title="Ice Cream" style="width:100px;height:100px;margin:5px">
+		</a>
+		<a href="https://www.amazon.com/Doritos-Tortilla-Cheese-1-75-Ounce-Single/dp/B000R7XBF2">
+			<img src="https://images-na.ssl-images-amazon.com/images/I/71Br1LeeJGL._SL1366_.jpg" title="Doritos" style="width:100px;height:100px;margin:5px">
+		</a>
 </html>
