--- a/tags.html
+++ b/tags.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<title>Hannah's Awesome Website</title>
 	</head>
 	<body>
-		<h1>Hannah Suh</h1>
-		<h2>About Me</h2>
-		<p>I love Harry Potter</p>
-		<p>Spaghetti is my favorite food</p>
+		<h1 style="color:blue;">Hannah Suh</h1>
+		<h2> style="font-family:verdana;">About Me</h2>
+		<p>"font-size:150%;">I love Harry Potter</p>
+		<p><i>Spaghetti is my favorite food</i></p>
 		<h2>My Favorite Sites</h2>
 		<ul>
 			<li>
