--- a/tags.html
+++ b/tags.html
@@ -6,9 +6,9 @@
 	<body>
 		<h1 style="color:blue;">Hannah Suh</h1>
 		<h2><b>About Me</h2>
-		<p>I <sub>love</sub> Harry Potter</p>
+		<p>I <sub>love</sub> Harry <sup>Potter</sup></p>
 		<p><i>Spaghetti is my favorite food</i></p>
-		<h2>My <sup>Favorite</sup> Sites</h2>
+		<h2>My Favorite Sites</h2>
 		<ul>
 			<li>
 				<a href="https://www.google.com">Google</a>
