--- a/tags.html
+++ b/tags.html
@@ -8,7 +8,7 @@
 		<h2><b>About Me</h2>
 		<p>I <sub>love</sub> Harry Potter</p>
 		<p><i>Spaghetti is my favorite <sup>food</sup></i></p>
-		<h2>My Favorite Sites</h2>
+		<h2 style="color:red;">My Favorite Sites</h2>
 		<ul>
 			<li>
 				<a href="https://www.google.com">Google</a>
