--- a/someCSS.html
+++ b/someCSS.html
@@ -11,9 +11,10 @@ p.serif {
 </style>
 </head>
 <body>
-<h1>CSS font-family</h1>
 <p class="sansserif"> My name is Hannah and I was born in Kelso, Washington a small town located in Southern Washington. I go to the University of Washington and live in Seattle now. I enjoy living in a big city. It has a lot more exciting things.</p>
 <p class="serif"> My favorite color is blue and my favorite movies are the Harry Potter series. My favorite out of those has to be the Prisoner of Azkaban. My least favorite would probably be the Chamber of Secrets.</p>
 
+<img src="https://www.papaginos.com/assets/images/error-sadPizza.jpg" style="width:50px;height:50px;>
+<img src="https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg" style="width:50px;height:50px;>
 </body>
 </html>
